--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: yellow;
+    background-color: green;
 }
 
 h1{
